# benchmark-datetime

./: .gitattributes  .pre-commit-config.yaml  NEWS.rst  README.md  mypy.ini  pyproject.toml  ruff.toml
benchmark/: test_dump.py  test_manipulate.py  test_parse.py
benchmark_datetime/: benchmark.py
