[tool.poetry]
name = "benchmark-datetime"
version = "0.1.0"
description = ""
authors = ["Alessio <148966056+olk-m@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11.6"
pendulum = "2.1.2"
pydantic = "2.5.2"
python-dateutil = "2.8.2"
arrow = "1.3.0"
udatetime = "0.0.17"
pandas = {version = "2.1.4", extras=["performance"]}

pytest = "^7.4.3"
pytest-benchmark = {version="^4.0.0", extras=["histogram"]}
Faker = "20.1.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
