[tool.poetry]
name = "benchmark-datetime"
version = "0.1.0"
description = ""
authors = ["Alessio <148966056+olk-m@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12.3"
pendulum = "^3.0.0"
pydantic = "^2.7.3"
python-dateutil = "^2.9.0"
arrow = "^1.3.0"
udatetime = "^0.0.17"
pandas = {version = "^2.2.2", extras=["performance"]}

pytest = "^8.2.2"
pytest-benchmark = {version="^4.0.0", extras=["histogram"]}
Faker = "^25.8.0"

[tool.poetry.group.dev.dependencies]
pip-audit = "^2.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
